--- a/asc/Makefile
+++ b/asc/Makefile
@@ -13,7 +13,7 @@ OS = $(shell uname)
 ARCH = $(shell uname -m)
 PLATFORM = $(OS)-$(ARCH)
 
-CFLAGS = -std=gnu99 -g -Wall -fPIC -O3
+CFLAGS = -g -Wall -fPIC -O3
 CFLAGS += -fno-common -fno-strict-aliasing
 CFLAGS += -march=nocona -DMARCH_$(ARCH)
 CFLAGS += -D_FILE_OFFSET_BITS=64 -D_REENTRANT -D_GNU_SOURCE
@@ -93,7 +93,7 @@ endif
 ##  MAIN TARGETS                                                             ##
 ###############################################################################
 
-TARGETS = fs2as as2fs
+TARGETS = fs2as fs2as-inotify as2fs
 
 all: $(TARGETS)
 
@@ -102,6 +102,9 @@ as2fs: as2fs.c as_utils.c
 
 fs2as: fs2as.c as_utils.c
 	$(CC) -o $@ $^ $(AEROSPIKE)/target/$(PLATFORM)/lib/libaerospike.a $(LDFLAGS) $(CFLAGS)
+
+fs2as-inotify: fs2as-inotify.c as_utils.c inotify_utils.cpp
+	g++ -o $@ $^ $(AEROSPIKE)/target/$(PLATFORM)/lib/libaerospike.a $(LDFLAGS) $(CFLAGS)
 
 .PHONY: clean
 clean:
